# monte_carlo_method

./: .gitignore  CMakeLists.txt  README.md  akceleracja.xlsx  main.cpp  main.cu  monte_carlo_seq.cpp  skrypt.py  tabelki.xlsx
kernels/: monte_carlo_parallel.cu
parallel/: CMakeLists.txt  findMinMax.cu  kernel.cu  monte_carlo.cu  monte_carlo.cuh
sequence/: CMakeLists.txt  findMinMax.cpp  monte_carlo.cpp  monte_carlo.hpp
